--- a/genindex.html
+++ b/genindex.html
@@ -495,12 +495,12 @@
       </ul></li>
       <li><a href="libraries/desktop_windows/python.html#RPA.Desktop.Windows.Windows.connect_by_handle">connect_by_handle() (RPA.Desktop.Windows.Windows method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="libraries/desktop_windows/python.html#RPA.Desktop.Windows.Windows.connect_by_pid">connect_by_pid() (RPA.Desktop.Windows.Windows method)</a>
 </li>
       <li><a href="libraries/database/python.html#RPA.Database.Database.connect_to_database">connect_to_database() (RPA.Database.Database method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="libraries/sap/python.html#RPA.SAP.SAP.connect_to_existing_connection">connect_to_existing_connection() (RPA.SAP.SAP method)</a>
 </li>
       <li><a href="libraries/sap/python.html#RPA.SAP.SAP.connect_to_session">connect_to_session() (RPA.SAP.SAP method)</a>
@@ -563,6 +563,10 @@
 </li>
       <li><a href="libraries/robocorp_workitems/python.html#RPA.Robocorp.WorkItems.WorkItems.create_output_work_item">create_output_work_item() (RPA.Robocorp.WorkItems.WorkItems method)</a>
 </li>
+      <li><a href="libraries/excel_application/python.html#RPA.Excel.Application.Application.create_pivot_field">create_pivot_field() (RPA.Excel.Application.Application method)</a>
+</li>
+      <li><a href="libraries/excel_application/python.html#RPA.Excel.Application.Application.create_pivot_table">create_pivot_table() (RPA.Excel.Application.Application method)</a>
+</li>
       <li><a href="libraries/cloud_aws/python.html#RPA.Cloud.AWS.AWS.create_queue">create_queue() (RPA.Cloud.AWS.AWS method)</a>
 </li>
       <li><a href="libraries/cloud_aws/python.html#RPA.Cloud.AWS.AWS.create_redshift_statement_parameters">create_redshift_statement_parameters() (RPA.Cloud.AWS.AWS method)</a>
@@ -575,8 +579,12 @@
 </li>
       <li><a href="libraries/smartsheet/python.html#RPA.Smartsheet.Smartsheet.create_sheet">create_sheet() (RPA.Smartsheet.Smartsheet method)</a>
 </li>
-      <li><a href="libraries/tables/python.html#RPA.Tables.Tables.create_table">create_table() (RPA.Tables.Tables method)</a>
+      <li><a href="libraries/excel_application/python.html#RPA.Excel.Application.Application.create_table">create_table() (RPA.Excel.Application.Application method)</a>
+
+      <ul>
+        <li><a href="libraries/tables/python.html#RPA.Tables.Tables.create_table">(RPA.Tables.Tables method)</a>
 </li>
+      </ul></li>
       <li><a href="libraries/calendar/python.html#RPA.Calendar.Calendar.create_time">create_time() (RPA.Calendar.Calendar method)</a>
 </li>
       <li><a href="libraries/excel_files/python.html#RPA.Excel.Files.Files.create_workbook">create_workbook() (RPA.Excel.Files.Files method)</a>
@@ -827,6 +835,8 @@
 </li>
       <li><a href="libraries/tables/python.html#RPA.Tables.Tables.filter_table_with_keyword">filter_table_with_keyword() (RPA.Tables.Tables method)</a>
 </li>
+      <li><a href="libraries/excel_application/python.html#RPA.Excel.Application.Application.find">find() (RPA.Excel.Application.Application method)</a>
+</li>
       <li><a href="libraries/browser_selenium/python.html#RPA.Browser.Selenium.Selenium.find_element">find_element() (RPA.Browser.Selenium.Selenium method)</a>
 
       <ul>
@@ -850,6 +860,8 @@
       <li><a href="libraries/tables/python.html#RPA.Tables.Tables.find_table_rows">find_table_rows() (RPA.Tables.Tables method)</a>
 </li>
       <li><a href="libraries/images/python.html#RPA.Images.Images.find_template_in_image">find_template_in_image() (RPA.Images.Images method)</a>
+</li>
+      <li><a href="libraries/word_application/python.html#RPA.Word.Application.Application.find_text">find_text() (RPA.Word.Application.Application method)</a>
 </li>
       <li><a href="libraries/calendar/python.html#RPA.Calendar.Calendar.first_business_day_of_the_month">first_business_day_of_the_month() (RPA.Calendar.Calendar method)</a>
 </li>
@@ -938,6 +950,8 @@
       <li><a href="libraries/hubspot/python.html#RPA.Hubspot.Hubspot.get_current_batch">get_current_batch() (RPA.Hubspot.Hubspot method)</a>
 </li>
       <li><a href="libraries/hubspot/python.html#RPA.Hubspot.Hubspot.get_current_batch_inputs">get_current_batch_inputs() (RPA.Hubspot.Hubspot method)</a>
+</li>
+      <li><a href="libraries/word_application/python.html#RPA.Word.Application.Application.get_current_line">get_current_line() (RPA.Word.Application.Application method)</a>
 </li>
       <li><a href="libraries/http/python.html#RPA.HTTP.HTTP.get_current_session_alias">get_current_session_alias() (RPA.HTTP.HTTP method)</a>
 </li>
@@ -1071,8 +1085,6 @@
         <li><a href="libraries/windows/python.html#RPA.Windows.Windows.get_keyword_source">(RPA.Windows.Windows method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="libraries/browser_selenium/python.html#RPA.Browser.Selenium.Selenium.get_keyword_tags">get_keyword_tags() (RPA.Browser.Selenium.Selenium method)</a>
 
       <ul>
@@ -1085,6 +1097,8 @@
         <li><a href="libraries/windows/python.html#RPA.Windows.Windows.get_keyword_tags">(RPA.Windows.Windows method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="libraries/browser_selenium/python.html#RPA.Browser.Selenium.Selenium.get_keyword_types">get_keyword_types() (RPA.Browser.Selenium.Selenium method)</a>
 
       <ul>
@@ -1121,6 +1135,8 @@
         <li><a href="libraries/desktop_windows/python.html#RPA.Desktop.Windows.Windows.get_memory_stats">(RPA.Desktop.Windows.Windows method)</a>
 </li>
       </ul></li>
+      <li><a href="libraries/word_application/python.html#RPA.Word.Application.Application.get_number_of_lines">get_number_of_lines() (RPA.Word.Application.Application method)</a>
+</li>
       <li><a href="libraries/database/python.html#RPA.Database.Database.get_number_of_rows">get_number_of_rows() (RPA.Database.Database method)</a>
 </li>
       <li><a href="libraries/email_exchange/python.html#RPA.Email.Exchange.Exchange.get_oauth_token">get_oauth_token() (RPA.Email.Exchange.Exchange method)</a>
@@ -1149,6 +1165,8 @@
 </li>
       <li><a href="libraries/hubspot/python.html#RPA.Hubspot.Hubspot.get_pipeline_stages">get_pipeline_stages() (RPA.Hubspot.Hubspot method)</a>
 </li>
+      <li><a href="libraries/excel_application/python.html#RPA.Excel.Application.Application.get_pivot_tables">get_pivot_tables() (RPA.Excel.Application.Application method)</a>
+</li>
       <li><a href="libraries/images/python.html#RPA.Images.Images.get_pixel_color_in_image">get_pixel_color_in_image() (RPA.Images.Images method)</a>
 </li>
       <li><a href="libraries/salesforce/python.html#RPA.Salesforce.Salesforce.get_pricebook_entries">get_pricebook_entries() (RPA.Salesforce.Salesforce method)</a>
@@ -1160,6 +1178,8 @@
       <li><a href="libraries/robocorp_process/python.html#RPA.Robocorp.Process.Process.get_process_run_status">get_process_run_status() (RPA.Robocorp.Process.Process method)</a>
 </li>
       <li><a href="libraries/salesforce/python.html#RPA.Salesforce.Salesforce.get_products_in_pricelist">get_products_in_pricelist() (RPA.Salesforce.Salesforce method)</a>
+</li>
+      <li><a href="libraries/excel_application/python.html#RPA.Excel.Application.Application.get_range">get_range() (RPA.Excel.Application.Application method)</a>
 </li>
       <li><a href="libraries/cloud_aws/python.html#RPA.Cloud.AWS.AWS.get_redshift_statement_results">get_redshift_statement_results() (RPA.Cloud.AWS.AWS method)</a>
 </li>
@@ -1519,6 +1539,8 @@
 </li>
       <li><a href="libraries/smartsheet/python.html#RPA.Smartsheet.Smartsheet.list_sheets">list_sheets() (RPA.Smartsheet.Smartsheet method)</a>
 </li>
+      <li><a href="libraries/excel_application/python.html#RPA.Excel.Application.Application.list_tables">list_tables() (RPA.Excel.Application.Application method)</a>
+</li>
       <li><a href="libraries/email_exchange/python.html#RPA.Email.Exchange.Exchange.list_unread_messages">list_unread_messages() (RPA.Email.Exchange.Exchange method)</a>
 </li>
       <li><a href="libraries/robocorp_workitems/python.html#RPA.Robocorp.WorkItems.WorkItems.list_work_item_files">list_work_item_files() (RPA.Robocorp.WorkItems.WorkItems method)</a>
@@ -1571,17 +1593,19 @@
 </li>
       <li><a href="libraries/desktop_windows/python.html#RPA.Desktop.Windows.Windows.mouse_click_coords">mouse_click_coords() (RPA.Desktop.Windows.Windows method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="libraries/desktop_windows/python.html#RPA.Desktop.Windows.Windows.mouse_click_image">mouse_click_image() (RPA.Desktop.Windows.Windows method)</a>
 </li>
       <li><a href="libraries/filesystem/python.html#RPA.FileSystem.FileSystem.move_directory">move_directory() (RPA.FileSystem.FileSystem method)</a>
 </li>
       <li><a href="libraries/outlook_application/python.html#RPA.Outlook.Application.Application.move_emails">move_emails() (RPA.Outlook.Application.Application method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="libraries/filesystem/python.html#RPA.FileSystem.FileSystem.move_file">move_file() (RPA.FileSystem.FileSystem method)</a>
 </li>
       <li><a href="libraries/filesystem/python.html#RPA.FileSystem.FileSystem.move_files">move_files() (RPA.FileSystem.FileSystem method)</a>
+</li>
+      <li><a href="libraries/word_application/python.html#RPA.Word.Application.Application.move_horizontally">move_horizontally() (RPA.Word.Application.Application method)</a>
 </li>
       <li><a href="libraries/email_exchange/python.html#RPA.Email.Exchange.Exchange.move_message">move_message() (RPA.Email.Exchange.Exchange method)</a>
 </li>
@@ -1594,6 +1618,16 @@
       <li><a href="libraries/email_imapsmtp/python.html#RPA.Email.ImapSmtp.ImapSmtp.move_messages_by_ids">move_messages_by_ids() (RPA.Email.ImapSmtp.ImapSmtp method)</a>
 </li>
       <li><a href="libraries/excel_files/python.html#RPA.Excel.Files.Files.move_range">move_range() (RPA.Excel.Files.Files method)</a>
+</li>
+      <li><a href="libraries/word_application/python.html#RPA.Word.Application.Application.move_to_end">move_to_end() (RPA.Word.Application.Application method)</a>
+</li>
+      <li><a href="libraries/word_application/python.html#RPA.Word.Application.Application.move_to_line_end">move_to_line_end() (RPA.Word.Application.Application method)</a>
+</li>
+      <li><a href="libraries/word_application/python.html#RPA.Word.Application.Application.move_to_line_start">move_to_line_start() (RPA.Word.Application.Application method)</a>
+</li>
+      <li><a href="libraries/word_application/python.html#RPA.Word.Application.Application.move_to_top">move_to_top() (RPA.Word.Application.Application method)</a>
+</li>
+      <li><a href="libraries/word_application/python.html#RPA.Word.Application.Application.move_vertically">move_vertically() (RPA.Word.Application.Application method)</a>
 </li>
       <li><a href="libraries/msgraph/python.html#RPA.MSGraph.MSGraph">MSGraph (class in RPA.MSGraph)</a>
 </li>
@@ -1718,7 +1752,11 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="libraries/desktop_clipboard/python.html#RPA.Desktop.Clipboard.Clipboard.paste_from_clipboard">paste_from_clipboard() (RPA.Desktop.Clipboard.Clipboard method)</a>
+
+      <ul>
+        <li><a href="libraries/word_application/python.html#RPA.Word.Application.Application.paste_from_clipboard">(RPA.Word.Application.Application method)</a>
 </li>
+      </ul></li>
       <li><a href="libraries/http/python.html#RPA.HTTP.HTTP.patch_on_session">patch_on_session() (RPA.HTTP.HTTP method)</a>
 </li>
       <li><a href="libraries/http/python.html#RPA.HTTP.HTTP.patch_request">patch_request() (RPA.HTTP.HTTP method)</a>
@@ -2295,8 +2333,6 @@
 </li>
       <li><a href="libraries/ftp/python.html#RPA.FTP.FTP.set_ascii_mode">set_ascii_mode() (RPA.FTP.FTP method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="libraries/hubspot/python.html#RPA.Hubspot.Hubspot.set_association">set_association() (RPA.Hubspot.Hubspot method)</a>
 </li>
       <li><a href="libraries/documentai_base64ai/python.html#RPA.DocumentAI.Base64AI.Base64AI.set_authorization">set_authorization() (RPA.DocumentAI.Base64AI.Base64AI method)</a>
@@ -2305,6 +2341,8 @@
         <li><a href="libraries/documentai_nanonets/python.html#RPA.DocumentAI.Nanonets.Nanonets.set_authorization">(RPA.DocumentAI.Nanonets.Nanonets method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="libraries/database/python.html#RPA.Database.Database.set_auto_commit">set_auto_commit() (RPA.Database.Database method)</a>
 </li>
       <li><a href="libraries/desktop_windows/python.html#RPA.Desktop.Windows.Windows.set_automation_speed">set_automation_speed() (RPA.Desktop.Windows.Windows method)</a>
@@ -2361,6 +2399,14 @@
 </li>
       <li><a href="libraries/javaaccessbridge/python.html#RPA.JavaAccessBridge.JavaAccessBridge.set_mouse_position">set_mouse_position() (RPA.JavaAccessBridge.JavaAccessBridge method)</a>
 </li>
+      <li><a href="libraries/excel_application/python.html#RPA.Excel.Application.Application.set_object_property">set_object_property() (RPA.Excel.Application.Application method)</a>
+
+      <ul>
+        <li><a href="libraries/outlook_application/python.html#RPA.Outlook.Application.Application.set_object_property">(RPA.Outlook.Application.Application method)</a>
+</li>
+        <li><a href="libraries/word_application/python.html#RPA.Word.Application.Application.set_object_property">(RPA.Word.Application.Application method)</a>
+</li>
+      </ul></li>
       <li><a href="libraries/salesforce/python.html#RPA.Salesforce.Salesforce.set_pricebook">set_pricebook() (RPA.Salesforce.Salesforce method)</a>
 </li>
       <li><a href="libraries/robocorp_process/python.html#RPA.Robocorp.Process.Process.set_process_id">set_process_id() (RPA.Robocorp.Process.Process method)</a>
@@ -2600,6 +2646,8 @@
       <li><a href="libraries/excel_files/python.html#RPA.Excel.Files.Files.worksheet_exists">worksheet_exists() (RPA.Excel.Files.Files method)</a>
 </li>
       <li><a href="libraries/robocorp_process/python.html#RPA.Robocorp.Process.Process.workspace_api">workspace_api() (RPA.Robocorp.Process.Process method)</a>
+</li>
+      <li><a href="libraries/excel_application/python.html#RPA.Excel.Application.Application.write_data_to_range">write_data_to_range() (RPA.Excel.Application.Application method)</a>
 </li>
       <li><a href="libraries/tables/python.html#RPA.Tables.Tables.write_table_to_csv">write_table_to_csv() (RPA.Tables.Tables method)</a>
 </li>
